# terminal

./: AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  INTENT.md  README.md  build.rs  flake.nix  rust-toolchain.toml  skills.md
reports/: 1-terminal-backend-survey.md
schema/: nexus.schema  sema.schema  signal.schema  terminal.concept.schema
scripts/: dirty-prompt-defers-witness  gate-cache-witness  named-session-registry-witness  terminal-signal-witness
src/: capture_validator.rs  cli_argument.rs  client.rs  command.rs  config.rs  contract.rs  daemon.rs  error.rs  lib.rs  meta.rs  pty.rs  registry.rs  signal_cli.rs  signal_control.rs  socket.rs  supervision.rs  supervisor.rs  tables.rs  terminal.rs
src/schema/: daemon.rs  nexus.rs  sema.rs  signal.rs
tests/: actor_runtime_truth.rs  actor_size_truth.rs  component_cli.rs  schema_generated.rs  terminal_contract.rs  terminal_registry.rs  terminal_signal_cli.rs  terminal_supervisor.rs
