[package]
name         = "persona-terminal"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.89"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/persona-terminal"
description  = "Persona terminal session owner built around terminal-cell."

[lib]
name = "persona_terminal"
path = "src/lib.rs"

[[bin]]
name = "persona-terminal-daemon"
path = "src/bin/persona-terminal-daemon.rs"

[[bin]]
name = "persona-terminal-view"
path = "src/bin/persona-terminal-view.rs"

[[bin]]
name = "persona-terminal-send"
path = "src/bin/persona-terminal-send.rs"

[[bin]]
name = "persona-terminal-capture"
path = "src/bin/persona-terminal-capture.rs"

[[bin]]
name = "persona-terminal-type"
path = "src/bin/persona-terminal-type.rs"

[[bin]]
name = "persona-terminal-sessions"
path = "src/bin/persona-terminal-sessions.rs"

[[bin]]
name = "persona-terminal-resolve"
path = "src/bin/persona-terminal-resolve.rs"

[[bin]]
name = "persona-terminal-signal"
path = "src/bin/persona-terminal-signal.rs"

[[bin]]
name = "persona-terminal-validate-capture"
path = "src/bin/persona-terminal-validate-capture.rs"

[[bin]]
name = "persona-terminal-supervisor"
path = "src/bin/persona-terminal-supervisor.rs"

[dependencies]
crossterm    = "0.28"
kameo        = { version = "0.20", default-features = false, features = ["tracing"] }
nota-codec   = { git = "https://github.com/LiGoldragon/nota-codec.git", branch = "main" }
nota-config  = { git = "https://github.com/LiGoldragon/nota-config.git", branch = "main" }
regex        = "1"
rkyv         = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
sema         = { git = "https://github.com/LiGoldragon/sema.git" }
signal-core  = { git = "https://github.com/LiGoldragon/signal-core.git" }
signal-hook  = "0.3"
owner-signal-persona-terminal = { git = "https://github.com/LiGoldragon/owner-signal-persona-terminal.git", branch = "main" }
signal-persona = { git = "https://github.com/LiGoldragon/signal-persona.git" }
signal-persona-auth = { git = "https://github.com/LiGoldragon/signal-persona-auth.git" }
signal-persona-terminal = { git = "https://github.com/LiGoldragon/signal-persona-terminal.git", branch = "main" }
terminal-cell = { git = "https://github.com/LiGoldragon/terminal-cell.git", branch = "main" }
thiserror    = "2"
tokio        = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
vt100        = "0.16"

[lints.rust]
unused = "warn"
dead_code = "warn"
