[package]
name         = "terminal"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.89"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/terminal"
description  = "Persona terminal session owner built around terminal-cell."

[lib]
name = "terminal"
path = "src/lib.rs"

[[bin]]
name = "terminal-daemon"
path = "src/bin/terminal-daemon.rs"

[[bin]]
name = "terminal"
path = "src/bin/terminal.rs"
required-features = ["nota-text"]

[[bin]]
name = "meta-terminal"
path = "src/bin/meta_terminal.rs"
required-features = ["nota-text"]

[[bin]]
name = "terminal-viewer"
path = "src/bin/terminal_viewer.rs"

[[bin]]
name = "terminal-send"
path = "src/bin/terminal-send.rs"

[[bin]]
name = "terminal-capture"
path = "src/bin/terminal-capture.rs"

[[bin]]
name = "terminal-type"
path = "src/bin/terminal-type.rs"

[[bin]]
name = "terminal-sessions"
path = "src/bin/terminal-sessions.rs"

[[bin]]
name = "terminal-resolve"
path = "src/bin/terminal-resolve.rs"

[[bin]]
name = "terminal-signal"
path = "src/bin/terminal-signal.rs"

[[bin]]
name = "terminal-validate-capture"
path = "src/bin/terminal-validate-capture.rs"

[[bin]]
name = "terminal-supervisor"
path = "src/bin/terminal-supervisor.rs"

[dependencies]
crossterm    = "0.28"
kameo        = { version = "0.20", default-features = false, features = ["tracing"] }
nota-next    = { git = "https://github.com/LiGoldragon/nota-next.git", branch = "main", optional = true }
regex        = "1"
rkyv         = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
sema-engine  = { git = "https://github.com/LiGoldragon/sema-engine.git", branch = "main" }
signal-frame = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main" }
signal-hook  = "0.3"
meta-signal-terminal = { git = "https://github.com/LiGoldragon/meta-signal-terminal.git", branch = "main" }
signal-persona = { git = "https://github.com/LiGoldragon/signal-persona.git", branch = "main" }
signal-terminal = { git = "https://github.com/LiGoldragon/signal-terminal.git", branch = "main" }
terminal-cell = { git = "https://github.com/LiGoldragon/terminal-cell.git", branch = "main" }
thiserror    = "2"
tokio        = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
triad-runtime = { git = "https://github.com/LiGoldragon/triad-runtime.git", branch = "main" }
vt100        = "0.16"

[features]
default = []
nota-text = ["dep:nota-next"]

[build-dependencies]
schema-rust-next = { git = "https://github.com/LiGoldragon/schema-rust-next.git", branch = "main" }

[lints.rust]
unused = "warn"
dead_code = "warn"
